cargo-features = ["edition2021"]

[package]
name = "eclair-tortoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
crossterm = "0.22.1"
reqwest = { version = "0.11.7", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.16.0", features = ["crossterm"] }