cargo-features = ["edition2021"]

[package]
name = "eclair-tortoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.5"
crossterm = "0.22.1"
itertools = "0.10.3"
log = "0.4"
log4rs = "1.0.0"
num-format = "0.4.0"
reqwest = { version = "0.11.7", features = [ "json" ] }
scopeguard = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.16.0", features = ["crossterm"] }

[features]
default = ["trace-to-file"]
trace-to-file = []

[lib]
name = "eclair-api"
path = "src/lib.rs"

[[bin]]
name = "eclair-tortoise"
path = "src/bin.rs"
required-features = ["build-binary"]